--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
     <script src="js/postprocessing/BloomPass.js"></script>
 
     <script src="js/Stats.js"></script>
-    <script src="js/DAT.GUI.min.js"></script>
+    <script src="js/dat.gui.min.js"></script>
     <!-- Custom code -->
     <script type="text/javascript" src="gcode_model.js"></script>
     <script type="text/javascript" src="gcode_parser.js"></script>
